--- a/investigadores.html
+++ b/investigadores.html
@@ -37,9 +37,9 @@
 
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
-                    <a href="index.html" class="nav-item nav-link active">Inicio</a>
+                    <a href="index.html" class="nav-item nav-link">Inicio</a>
                     <a href="*" class="nav-item nav-link">Investigación y procesos</a>
-                    <a href="investigadores.html" class="nav-item nav-link">Investigadores</a>
+                    <a href="investigadores.html" class="nav-item nav-link active">Investigadores</a>
                     <a href="fpst.html" class="nav-item nav-link">FPST</a>
                     <a href="acervo.html" class="nav-item nav-link">Acervo digital</a>
 
