--- a/lineasinvestigacion.html
+++ b/lineasinvestigacion.html
@@ -43,8 +43,8 @@
 
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
-                        <a href="index.html" class="nav-item nav-link active">Inicio</a>
-                        <a href="lineasinvestigacion.html" class="nav-item nav-link">Líneas de investigación</a>
+                        <a href="index.html" class="nav-item nav-link">Inicio</a>
+                        <a href="lineasinvestigacion.html" class="nav-item nav-link active">Líneas de investigación</a>
                         <a href="investigadores.html" class="nav-item nav-link">Investigadores</a>
                         <a href="fpst.html" class="nav-item nav-link">FPST</a>
                         <a href="acervo.html" class="nav-item nav-link">Acervo digital</a>
