cambio de colores y titulos

--- a/fpst.html
+++ b/fpst.html
@@ -56,7 +56,7 @@
                         <h2>FPST</h2>
                     </div>
                     <div class="col-12">
-                        <a class="page-header">(Significado de FPST y breve descripción de qué es o para qué sirve)</a>
+                        <a class="page-header">(Factores Psicosociales en el Trabajo)</a>
       
                     </div>
                 </div>
@@ -71,7 +71,7 @@
             <div class="container">
                 <div class="section-header text-center">
                    
-                    <h2>FPST disponibles</h2>
+                    <h2>Test disponibles</h2>
                 </div>
                 <div class="row">
 
