--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <div class="about-content">
                             <div class="section-header">
                                 <p>Sobre el proyecto</p>
-                                <h2>¿Qué es Universidad Saludable?</h2>
+                                <h2>Nuestro proyecto</h2>
                             </div>
                             <div class="about-text">
                                 <p>
