--- a/investigadores.html
+++ b/investigadores.html
@@ -54,7 +54,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2>Investigadores del C.C.I.</h2>
+                    <h2>Investigadores del C C I </h2>
                 </div>
                 <div class="col-12">
                     <a class="page-header">Cuerpo Colegiado de Investigadores</a>
@@ -179,7 +179,7 @@
                             <div class="modal-body">
                                 <p><strong>Nombre:</strong> Nombre del Miembro</p>
                                 <p><strong>Profesión:</strong> Detalle de la profesión</p>
-                                <p><strong>Biografía:</strong> Aquí puedes agregar más información sobre la persona, su
+                                <p><strong>Biografía:</strong> Agregar más información sobre la persona, su
                                     experiencia y logros.</p>
                             </div>
                             <div class="modal-footer">
@@ -228,57 +228,7 @@
                             <div class="modal-body">
                                 <p><strong>Nombre:</strong> Nombre del Miembro</p>
                                 <p><strong>Profesión:</strong> Detalle de la profesión</p>
-                                <p><strong>Biografía:</strong> Aquí puedes agregar más información sobre la persona, su
-                                    experiencia y logros.</p>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-
-
-                <div class="col-lg-4 col-md-6">
-                    <div class="team-item">
-                        <div class="team-img">
-                            <img src="img/team-1.jpg" alt="Image">
-                            <div class="team-social">
-                                <a href=""><i class="fab fa-twitter"></i></a>
-                                <a href=""><i class="fab fa-facebook-f"></i></a>
-                                <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                <a href=""><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                        <div class="team-text">
-                            <h2>Nombre</h2>
-                            <!-- Contenedor para alinear "Profesión" y el botón en la misma línea -->
-                            <div class="info-container">
-                                <p>Profesión</p>
-                                <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#teamModal">
-                                    Ver más
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Modal -->
-                <div class="modal fade" id="teamModal" tabindex="-1" aria-labelledby="teamModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="teamModalLabel">Más Información</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <p><strong>Nombre:</strong> Nombre del Miembro</p>
-                                <p><strong>Profesión:</strong> Detalle de la profesión</p>
-                                <p><strong>Biografía:</strong> Aquí puedes agregar más información sobre la persona, su
+                                <p><strong>Biografía:</strong> Agregar más información sobre la persona, su
                                     experiencia y logros.</p>
                             </div>
                             <div class="modal-footer">
@@ -328,7 +278,57 @@
                             <div class="modal-body">
                                 <p><strong>Nombre:</strong> Nombre del Miembro</p>
                                 <p><strong>Profesión:</strong> Detalle de la profesión</p>
-                                <p><strong>Biografía:</strong> Aquí puedes agregar más información sobre la persona, su
+                                <p><strong>Biografía:</strong> Agregar más información sobre la persona, su
+                                    experiencia y logros.</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="team-item">
+                        <div class="team-img">
+                            <img src="img/team-1.jpg" alt="Image">
+                            <div class="team-social">
+                                <a href=""><i class="fab fa-twitter"></i></a>
+                                <a href=""><i class="fab fa-facebook-f"></i></a>
+                                <a href=""><i class="fab fa-linkedin-in"></i></a>
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                        <div class="team-text">
+                            <h2>Nombre</h2>
+                            <!-- Contenedor para alinear "Profesión" y el botón en la misma línea -->
+                            <div class="info-container">
+                                <p>Profesión</p>
+                                <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#teamModal">
+                                    Ver más
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Modal -->
+                <div class="modal fade" id="teamModal" tabindex="-1" aria-labelledby="teamModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="teamModalLabel">Más Información</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p><strong>Nombre:</strong> Nombre del Miembro</p>
+                                <p><strong>Profesión:</strong> Detalle de la profesión</p>
+                                <p><strong>Biografía:</strong> Agregar más información sobre la persona, su
                                     experiencia y logros.</p>
                             </div>
                             <div class="modal-footer">
@@ -375,7 +375,7 @@
                             <div class="modal-body">
                                 <p><strong>Nombre:</strong> Nombre del Miembro</p>
                                 <p><strong>Profesión:</strong> Detalle de la profesión</p>
-                                <p><strong>Biografía:</strong> Aquí puedes agregar más información sobre la persona, su
+                                <p><strong>Biografía:</strong> Agregar más información sobre la persona, su
                                     experiencia y logros.</p>
                             </div>
                             <div class="modal-footer">
@@ -422,7 +422,7 @@
                             <div class="modal-body">
                                 <p><strong>Nombre:</strong> Nombre del Miembro</p>
                                 <p><strong>Profesión:</strong> Detalle de la profesión</p>
-                                <p><strong>Biografía:</strong> Aquí puedes agregar más información sobre la persona, su
+                                <p><strong>Biografía:</strong> Agregar más información sobre la persona, su
                                     experiencia y logros.</p>
                             </div>
                             <div class="modal-footer">
