Cambio de CCI por Universidad Saludable

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <div class="carousel-text">
                             <h1>¿Quiénes <span>somos</span>?</h1>
                             <p>
-                                Información general del CCI
+                                Información general de Universidad Saludable
                             </p>
                         
                         </div>
