--- a/lineasinvestigacion.html
+++ b/lineasinvestigacion.html
@@ -86,7 +86,7 @@
                             <div class="about-img">
                                 <img src="img/conocemas.png" alt="Image">
                                 <button type="button" class="btn-play" data-toggle="modal"
-                                    data-src="https://youtu.be/YxmxJmnc9aQ?si=rzN43L56Dt5zMZrZ" data-target="#videoModal">
+                                    data-src="https://youtu.be/YxmxJmnc9aQ?si=-YYVS1du-ntvXqWT" data-target="#videoModal">
                                     <span></span>
                                 </button>
                             </div>
@@ -175,7 +175,7 @@
                                     <p>
                                         Estrés laboral <br>
                                         Fatiga <br>
-                                        Sindróme de Bournout <br>
+                                        Sindróme de Burnout <br>
                                         Karoshi <br>
                                         Workaholic     
                                     </p>
@@ -213,8 +213,6 @@
                             Saber más
                         </button>
                         <br>
-
-
                         </body>
 
             <!-- Footer Start -->
