cambios en diseño de las imagenes

--- a/fpst.html
+++ b/fpst.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Inicio - Universidad Saludable</title>
+        <title>FPST - Universidad Saludable</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Free Website Template" name="keywords">
         <meta content="Free Website Template" name="description">
@@ -71,7 +71,7 @@
             <div class="container">
                 <div class="section-header text-center">
                    
-                    <h2>Test disponibles</h2>
+                    <h2>Cuestionarios disponibles</h2>
                 </div>
                 
 <div class="row">
@@ -82,17 +82,17 @@
             <img src="img/blog-1.jpg" alt="Blog">
         </div>
         <div class="blog-content">
-            <h2 class="blog-title">Título de test.</h2>
+            <h2 class="blog-title">Título de cuestionario.</h2>
             <div class="blog-meta">
                 <p><i class="far fa-user"></i> Nombre de quien publica</p>
                 <p><i class="far fa-list-alt"></i> Categoría</p>
                 <p><i class="far fa-calendar-alt"></i> 01-enero-2025</p>
             </div>
             <div class="blog-text">
-                <p>Descripción del test.</p>
+                <p>Descripción del cuestionario.</p>
                 <!-- Botón para abrir el modal -->
                 <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#testModal">
-                    Realizar test
+                    Realizar cuestionario
                 </button>
             </div>
         </div>
@@ -104,7 +104,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="testModalLabel">Formulario del Test</h5>
+                <h5 class="modal-title" id="testModalLabel">Formulario del cuestionario</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
