--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="img/carousel-2.jpg" alt="Image">
+                            <img src="img/blog-1.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h1>¿Qué <span>es</span> el CCI?</h1>
