--- a/fpst.html
+++ b/fpst.html
@@ -148,17 +148,17 @@
             <img src="img/blog-2.jpg" alt="Blog">
         </div>
         <div class="blog-content">
-            <h2 class="blog-title">Título de test.</h2>
+            <h2 class="blog-title">Título de cuestionario.</h2>
             <div class="blog-meta">
                 <p><i class="far fa-user"></i> Nombre de quien publica</p>
                 <p><i class="far fa-list-alt"></i> Categoría</p>
                 <p><i class="far fa-calendar-alt"></i> 01-enero-2025</p>
             </div>
             <div class="blog-text">
-                <p>Descripción del test.</p>
+                <p>Descripción del cuestionario.</p>
                 <!-- Botón para abrir el modal -->
                 <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#testModal">
-                    Realizar test
+                    Realizar cuestionario
                 </button>
             </div>
         </div>
@@ -170,7 +170,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="testModalLabel">Formulario del Test</h5>
+                <h5 class="modal-title" id="testModalLabel">Formulario del cuestionario</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -213,17 +213,17 @@
             <img src="img/blog-3.jpg" alt="Blog">
         </div>
         <div class="blog-content">
-            <h2 class="blog-title">Título de test.</h2>
+            <h2 class="blog-title">Título de cuestionario.</h2>
             <div class="blog-meta">
                 <p><i class="far fa-user"></i> Nombre de quien publica</p>
                 <p><i class="far fa-list-alt"></i> Categoría</p>
                 <p><i class="far fa-calendar-alt"></i> 01-enero-2025</p>
             </div>
             <div class="blog-text">
-                <p>Descripción del test.</p>
+                <p>Descripción del cuestionario.</p>
                 <!-- Botón para abrir el modal -->
                 <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#testModal">
-                    Realizar test
+                    Realizar cuestionario
                 </button>
             </div>
         </div>
@@ -235,7 +235,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="testModalLabel">Formulario del Test</h5>
+                <h5 class="modal-title" id="testModalLabel">Formulario del cuestionario</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -278,17 +278,17 @@
             <img src="img/blog-4.jpg" alt="Blog">
         </div>
         <div class="blog-content">
-            <h2 class="blog-title">Título de test.</h2>
+            <h2 class="blog-title">Título de cuestionario.</h2>
             <div class="blog-meta">
                 <p><i class="far fa-user"></i> Nombre de quien publica</p>
                 <p><i class="far fa-list-alt"></i> Categoría</p>
                 <p><i class="far fa-calendar-alt"></i> 01-enero-2025</p>
             </div>
             <div class="blog-text">
-                <p>Descripción del test.</p>
+                <p>Descripción del cuestionario.</p>
                 <!-- Botón para abrir el modal -->
                 <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#testModal">
-                    Realizar test
+                    Realizar cuestionario
                 </button>
             </div>
         </div>
@@ -300,7 +300,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="testModalLabel">Formulario del Test</h5>
+                <h5 class="modal-title" id="testModalLabel">Formulario del cuestionario</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -350,7 +350,7 @@
                         </ul> 
                     </div>
                 </div>
-                
+
             </div>
         </div>
         <!-- Blog End -->
