--- a/lineasinvestigacion.html
+++ b/lineasinvestigacion.html
@@ -86,7 +86,7 @@
                             <div class="about-img">
                                 <img src="img/conocemas.png" alt="Image">
                                 <button type="button" class="btn-play" data-toggle="modal"
-                                    data-src="https://youtu.be/YxmxJmnc9aQ?si=-YYVS1du-ntvXqWT" data-target="#videoModal">
+                                    data-src="https://landbot.online/v3/H-2778199-7ATZU73NO5JRCGZK/index.html" data-target="#videoModal">
                                     <span></span>
                                 </button>
                             </div>
