--- a/acervo.html
+++ b/acervo.html
@@ -37,12 +37,20 @@
 
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
-                    <a href="index.html" class="nav-item nav-link ">Inicio</a>
-                    <a href="lineasinvestigacion.html" class="nav-item nav-link">Investigación y procesos</a>
-                    <a href="investigadores.html" class="nav-item nav-link">Investigadores</a>
+                    <a href="index.html" class="nav-item nav-link">Inicio</a>
+                    <div class="nav-item dropdown">
+                        <a href="lineasinvestigacion.html" class="nav-link dropdown-toggle"
+                            data-toggle="dropdown">Lineas de investigación</a>
+                        <div class="dropdown-menu">
+                            <a href="lineasinvestigacion.html" class="dropdown-item">Lineas de investigación</a>
+                            <a href="investigadores.html" class="dropdown-item">Investigadores</a>
+                        </div>
+                    </div>
+                    <!-- <a href="lineasinvestigacion.html" class="nav-item nav-link">Lineas de investigación</a>
+                        <a href="investigadores.html" class="nav-item nav-link">Investigadores</a> -->
                     <a href="fpst.html" class="nav-item nav-link">FPST</a>
                     <a href="acervo.html" class="nav-item nav-link active">Acervo digital</a>
-
+                    <a href="inicioSesion.html" class="nav-item nav-link">Iniciar sesión</a>
                 </div>
             </div>
         </div>
