--- a/lineasinvestigacion.html
+++ b/lineasinvestigacion.html
@@ -39,8 +39,16 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="nav-item nav-link">Inicio</a>
-                        <a href="lineasinvestigacion.html" class="nav-item nav-link active">Líneas de investigación</a>
-                        <a href="investigadores.html" class="nav-item nav-link">Investigadores</a>
+                        <div class="nav-item dropdown">
+                            <a href="lineasinvestigacion.html" class="nav-link dropdown-toggle"
+                                data-toggle="dropdown">Lineas de investigación</a>
+                            <div class="dropdown-menu">
+                                <a href="lineasinvestigacion.html" class="dropdown-item">Lineas de investigación</a>
+                                <a href="investigadores.html" class="dropdown-item">Investigadores</a>
+                            </div>
+                        </div>
+                        <!-- <a href="lineasinvestigacion.html" class="nav-item nav-link active">Líneas de investigación</a>
+                        <a href="investigadores.html" class="nav-item nav-link">Investigadores</a> -->
                         <a href="fpst.html" class="nav-item nav-link">FPST</a>
                         <a href="acervo.html" class="nav-item nav-link">Acervo digital</a>
                      
