--- a/investigadores.html
+++ b/investigadores.html
@@ -50,7 +50,7 @@
                     <a href="investigadores.html" class="nav-item nav-link active">Investigadores</a> -->
                     <a href="fpst.html" class="nav-item nav-link">FPST</a>
                     <a href="acervo.html" class="nav-item nav-link">Acervo digital</a>
-
+                    <a href="inicioSesion.html" class="nav-item nav-link">Iniciar sesión</a>
                 </div>
             </div>
         </div>
