--- a/lineasinvestigacion.html
+++ b/lineasinvestigacion.html
@@ -75,12 +75,6 @@
     </div>
     <!-- Page Header End -->
 
-    <!-- Team Start -->
-    <div class="team">
-        <div class="container">
-
-
-
             <!-- About Start -->
             <div class="about">
                 <div class="container">
@@ -95,19 +89,16 @@
                             </div>
                         </div>
 
-
                         <div class="col-lg-6">
                             <div class="about-content">
                                 <div class="section-header">
                                     <p>¿Qué es?</p>
-                                    <h2>NOM-035-SPTS-2018</h2>
+                                    <h2>Universidad Saludable</h2>
                                 </div>
                                 <div class="about-text">
                                     <p>
-                                        La NOM-035-STPS-2018 es una norma oficial en México que establece lineamientos 
-                                        para identificar, analizar y prevenir los factores de riesgo psicosocial en el
-                                        trabajo. Su objetivo es mejorar la salud mental y el bienestar de los trabajadores,
-                                        promoviendo un entorno laboral seguro y saludable.      
+                                      Nuestro objetivo es generar un entorno saludable de trabajo para los docentes de esta
+                                      Universidad, promover y divulgar las       
                                     </p>
                                     <p>¿Qué son los inventarios?</p>
                                     <p>
@@ -117,7 +108,11 @@
                                         situaciones que puedan afectar la salud mental y emocional de los empleados, 
                                         permitiendo tomar acciones preventivas o correctivas.                                    </p>
                                     <!--   <a class="btn custom-btn" href="">Book A Table</a> -->
-                                </div>
+                                    <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#testModal">
+                                        Abrir NOM-035
+                                        </button>
+                                        <!-- <a class ="btm custom-btn" Close -->
+                                   </div>
                             </div>
                         </div>
                     </div>
@@ -137,18 +132,14 @@
                                     <!-- 16:9 aspect ratio -->
                                     <div class="embed-responsive embed-responsive-16by9">
                                         <iframe class="embed-responsive-item" src="" id="video" allowscriptaccess="always"
-                                            allow="autoplay"></iframe>
+                                            allow="autoplay">
+                                        </iframe>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <!-- Video Modal End -->
-                    <br>
-                        <!-- Botón para abrir el modal -->
-                        <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#testModal">
-                            Enlace NOM-035
-                        </button>
                     <br>
 
             <!-- About Start -->
@@ -158,9 +149,12 @@
                         <div class="col-lg-6">
                             <div class="about-img">
                                 <img src="img/Conocelos.png" alt="Image">
+                                <button type="button" class="btn-play" data-toggle="modal"
+                                data-src="https://landbot.online/v3/H-2778199-7ATZU73NO5JRCGZK/index.html" data-target="#videoModal">
+                                <span></span>
+                                </button>
                             </div>
                         </div>
-
 
                         <div class="col-lg-6">
                             <div class="about-content">
@@ -183,6 +177,10 @@
                                         Workaholic     
                                     </p>
                                     <!--   <a class="btn custom-btn" href="">Book A Table</a> -->
+                                     <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#testModal">
+                                     Saber más
+                                     </button>
+                                     <!-- <a class ="btm custom-btn" Close -->
                                 </div>
                             </div>
                         </div>
@@ -211,11 +209,76 @@
                     </div>
                     <!-- Video Modal End -->
                     <br>
-                        <!-- Botón para abrir el modal -->
-                        <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#testModal">
-                            Saber más
-                        </button>
-                        <br>
+
+                                <!-- About Start -->
+            <div class="about">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-lg-6">
+                            <div class="about-img">
+                                <img src="img/conocemas.png" alt="Image">
+                                <button type="button" class="btn-play" data-toggle="modal"
+                                    data-src="https://landbot.online/v3/H-2778199-7ATZU73NO5JRCGZK/index.html" data-target="#videoModal">
+                                    <span></span>
+                                </button>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-6">
+                            <div class="about-content">
+                                <div class="section-header">
+                                    <p>¿Qué es?</p>
+                                    <h2>NOM-035-SPTS-2018</h2>
+                                </div>
+                                <div class="about-text">
+                                    <p>
+                                        La NOM-035-STPS-2018 es una norma oficial en México que establece lineamientos 
+                                        para identificar, analizar y prevenir los factores de riesgo psicosocial en el
+                                        trabajo. Su objetivo es mejorar la salud mental y el bienestar de los trabajadores,
+                                        promoviendo un entorno laboral seguro y saludable.      
+                                    </p>
+                                    <p>¿Qué son los inventarios?</p>
+                                    <p>
+                                        Los inventarios de la NOM-035 son herramientas de evaluación, principalmente 
+                                        cuestionarios, que las empresas deben aplicar a sus trabajadores para medir los
+                                        factores de riesgo psicosocial en el ambiente laboral. Su propósito es identificar 
+                                        situaciones que puedan afectar la salud mental y emocional de los empleados, 
+                                        permitiendo tomar acciones preventivas o correctivas.                                    </p>
+                                    <!--   <a class="btn custom-btn" href="">Book A Table</a> -->
+                                    <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#testModal">
+                                        Abrir NOM-035
+                                        </button>
+                                        <!-- <a class ="btm custom-btn" Close -->
+                                   </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- About End -->
+
+                        <!-- Video Modal Start-->
+                        <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-body">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                    <!-- 16:9 aspect ratio -->
+                                    <div class="embed-responsive embed-responsive-16by9">
+                                        <iframe class="embed-responsive-item" src="" id="video" allowscriptaccess="always"
+                                            allow="autoplay">
+                                        </iframe>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Video Modal End -->
+
+                    
                         </body>
 
             <!-- Footer Start -->
