--- a/inicioSesion.html
+++ b/inicioSesion.html
@@ -63,12 +63,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2>Contact Us</h2>
+                    <h2>Iniciar Sesión</h2>
                 </div>
-                <div class="col-12">
+                <!-- <div class="col-12">
                     <a href="">Home</a>
                     <a href="">Contact</a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -78,11 +78,11 @@
     <!-- Contact Start -->
     <div class="contact">
         <div class="container">
-            <div class="section-header text-center">
-                <p>Contact Us</p>
-                <h2>Contact For Any Query</h2>
-            </div>
-            <div class="row align-items-center contact-information">
+            <!-- <div class="section-header text-center">
+            
+                <h2>Iniciar Sesión</h2>
+            </div> -->
+            <!-- <div class="row align-items-center contact-information">
                 <div class="col-md-6 col-lg-3">
                     <div class="contact-info">
                         <div class="contact-icon">
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="row contact-form">
                 <div class="col-md-6">
                     <iframe
@@ -144,27 +144,17 @@
                     <div id="success"></div>
                     <form name="sentMessage" id="contactForm" novalidate="novalidate">
                         <div class="control-group">
-                            <input type="text" class="form-control" id="name" placeholder="Your Name"
+                            <input type="text" class="form-control" id="name" placeholder="Correo electrónico"
                                 required="required" data-validation-required-message="Please enter your name" />
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="control-group">
-                            <input type="email" class="form-control" id="email" placeholder="Your Email"
+                            <input type="email" class="form-control" id="email" placeholder="Contraseña"
                                 required="required" data-validation-required-message="Please enter your email" />
                             <p class="help-block text-danger"></p>
                         </div>
-                        <div class="control-group">
-                            <input type="text" class="form-control" id="subject" placeholder="Subject"
-                                required="required" data-validation-required-message="Please enter a subject" />
-                            <p class="help-block text-danger"></p>
-                        </div>
-                        <div class="control-group">
-                            <textarea class="form-control" id="message" placeholder="Message" required="required"
-                                data-validation-required-message="Please enter your message"></textarea>
-                            <p class="help-block text-danger"></p>
-                        </div>
                         <div>
-                            <button class="btn custom-btn" type="submit" id="sendMessageButton">Send Message</button>
+                            <button class="btn custom-btn" type="submit" id="sendMessageButton">Iniciar sesión</button>
                         </div>
                     </form>
                 </div>
