--- a/acervo.html
+++ b/acervo.html
@@ -110,7 +110,18 @@
                             <h2>Informes</h2>
                         </div>
                     
-                        
+                        <div class="card-informe mb-4" style="max-width: 350px;">
+                            <div class="row g-0">
+                              <div class="col-md-4">
+                                <img src="img/testimonial-1.jpg" class="img-fluid rounded-start" alt="...">
+                              </div>
+                              <div class="col-md-8">
+                                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                              </div>
+                            </div>  
+                          </div>
+
+
                         <!-- Aquí va el contenido de la página -->
                         <div class="container">
                             <div class="row">
