--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="carousel-text">
                         <h1>¿Quiénes <span>somos</span>?</h1>
                         <p>
-                            Información general de Universidad Saludable
+                            Información general del C.C.I.
                         </p>
 
                     </div>
