lineas de investigacion

--- a/lineasinvestigacion.html
+++ b/lineasinvestigacion.html
@@ -232,7 +232,7 @@
                                     <p>
                                         <div class="col-lg-4">
                                         <li class="nav-item">
-                                            <a href="myModalestres" data-bs-toggle="modal" data-bs-target="#miModal">Estrés laboral</a>
+                                            <a href="fprst_completo.pdf" data-bs-toggle="modal">Estrés laboral</a>
                                         </li>
                                                                                 
                                         <li class="nav-item">
