--- a/index.html
+++ b/index.html
@@ -108,22 +108,20 @@
                 <div class="col-lg-6">
                     <div class="about-content">
                         <div class="section-header">
-                            <p>Sobre el proyecto </p>
+                            <p>Universidad Saludable </p>
                             <h2>Nuestro proyecto</h2>
                         </div>
                         <div class="about-text">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi.
-                                Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida
-                                condimentum, viverra quis sem.
+                                Universidad Saludable es una iniciativa importante que busca promover el bienestar integral 
+                                de la comunidad universitaria. 
                             </p>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi.
-                                Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida
-                                condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus. Aenean
-                                consectetur convallis porttitor. Aliquam interdum at lacus non blandit.
+                                Los factores psicosociales en el trabajo 
+                                son un elemento clave a considerar en este proyecto, y la NOM-035 proporciona un marco legal 
+                                y metodológico para abordarlos.
                             </p>
-                            <!--   <a class="btn custom-btn" href="">Book A Table</a> -->
+                              <a class="btn custom-btn" href="lineasinvestigacion.html">Conoce más</a>
                         </div>
                     </div>
                 </div>
@@ -144,8 +142,8 @@
                     </button>
                     <!-- 16:9 aspect ratio -->
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="" id="video" allowscriptaccess="always"
-                            allow="autoplay"></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/eq_FkxdoPkY?si=ruKvUu6wKQJ5PFSx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            
                     </div>
                 </div>
             </div>
@@ -163,40 +161,41 @@
             <div class="owl-carousel testimonials-carousel">
                 <div class="testimonial-item">
                     <div class="testimonial-img">
-                        <img src="img/testimonial-1.jpg" alt="Image">
+                        <img src="img/investigadores/tcap8.png" alt="Image">
                     </div>
                     <p>
-                        Breve descripción personal de su experiencia en el CCI
+                        Ser parte del CCI me ayudó a crecer profesionalmente.
+                    </p>
+                    
+                    <h2>Nombre</h2>
+                    <h3>Profesión</h3>
+                </div>
+                <div class="testimonial-item">
+                    <div class="testimonial-img">
+                        <img src="img/investigadores/tcap2.png" alt="Image">
+                    </div>
+                    <p>
+                        Participar en el CCI fue un reto muy enriquecedor.
                     </p>
                     <h2>Nombre</h2>
                     <h3>Profesión</h3>
                 </div>
                 <div class="testimonial-item">
                     <div class="testimonial-img">
-                        <img src="img/testimonial-1.jpg" alt="Image">
+                        <img src="img/investigadores/tcap3.png" alt="Image">
                     </div>
                     <p>
-                        Breve descripción personal de su experiencia en el CCI
+                        La investigación en el CCI me dio gran aprendizaje.
                     </p>
                     <h2>Nombre</h2>
                     <h3>Profesión</h3>
                 </div>
                 <div class="testimonial-item">
                     <div class="testimonial-img">
-                        <img src="img/testimonial-1.jpg" alt="Image">
+                        <img src="img/investigadores/tcap4.png" alt="Image">
                     </div>
                     <p>
-                        Breve descripción personal de su experiencia en el CCI
-                    </p>
-                    <h2>Nombre</h2>
-                    <h3>Profesión</h3>
-                </div>
-                <div class="testimonial-item">
-                    <div class="testimonial-img">
-                        <img src="img/testimonial-1.jpg" alt="Image">
-                    </div>
-                    <p>
-                        Breve descripción personal de su experiencia en el CCI
+                        En el CCI aprendí a resolver problemas complejos.
                     </p>
                     <h2>Nombre</h2>
                     <h3>Profesión</h3>
@@ -204,10 +203,10 @@
 
                 <div class="testimonial-item">
                     <div class="testimonial-img">
-                        <img src="img/testimonial-1.jpg" alt="Image">
+                        <img src="img/investigadores/tcap5.png" alt="Image">
                     </div>
                     <p>
-                        Breve descripción personal de su experiencia en el CCI
+                        Con el CCI comprendí el impacto real del estudio.
                     </p>
                     <h2>Nombre</h2>
                     <h3>Profesión</h3>
@@ -215,14 +214,27 @@
 
                 <div class="testimonial-item">
                     <div class="testimonial-img">
-                        <img src="img/testimonial-1.jpg" alt="Image">
+                        <img src="img/investigadores/tcap6.png" alt="Image">
                     </div>
                     <p>
-                        Breve descripción personal de su experiencia en el CCI
+                        Estar en el CCI me permitió innovar con soluciones.
                     </p>
                     <h2>Nombre</h2>
                     <h3>Profesión</h3>
                 </div>
+
+                <div class="testimonial-item">
+                    <div class="testimonial-img">
+                        <img src="img/investigadores/tcap7.png" alt="Image">
+                    </div>
+                    <p>
+                        Gracias al CCI pude mejorar mis habilidades clave.
+                    </p>
+                    <h2>Nombre</h2>
+                    <h3>Profesión</h3>
+                </div>
+
+
             </div>
         </div>
     </div>
